# GameofLife

./: CMakeLists.txt  README.md
src/: grid.h  main.cpp
